tests/spec/emit/snapshots/ref_newtype_dot0_auto_deref.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct UserId(int)
  
  fn main() {
    let id = UserId(5)
    let r = &id
    let _ = r.0
  }
---
package main

type UserId int

func main() {
	id := UserId(5)
	r := &id
	_ = int(*r)
}
