tests/spec/emit/snapshots/ref_newtype_extend_expr_position.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Wrap(Slice<int>)
  
  fn main() {
    let mut w = Wrap([1])
    let r = &w
    let _ = r.0.extend([2])
  }
---
package main

type Wrap []int

func main() {
	w := Wrap([]int{1})
	r := &w
	_ = append([]int(*r), []int{2}...)
}
