tests/spec/emit/snapshots/ref_newtype_slice_append.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Wrap(Slice<int>)
  
  fn main() {
    let mut w = Wrap([1])
    let mut r = &w
    r.* = Wrap(r.0.append(2))
    let _ = w
  }
---
package main

type Wrap []int

func main() {
	w := Wrap([]int{1})
	r := &w
	ref := r
	recv := ([]int)(*r)
	*ref = Wrap(append(recv[:len(recv):len(recv)], 2))
	_ = w
}
