tests/spec/emit/snapshots/ref_of_call_in_call_args.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn make_int() -> int { 1 }
  fn read_ref(r: Ref<int>) -> int { r.* }
  fn side_effect() -> int { 1 }
  
  fn test() -> int {
    side_effect() + read_ref(&make_int())
  }
---
package main

func makeInt() int {
	return 1
}

func readRef(r *int) int {
	return *r
}

func sideEffect() int {
	return 1
}

func test() int {
	left := sideEffect()
	ref := makeInt()
	return left + readRef(&ref)
}
