tests/spec/emit/snapshots/ref_of_call_nested_enum_constructors.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  enum Expr {
    Num(int),
    Add(Ref<Expr>, Ref<Expr>),
  }
  
  fn test() -> Expr {
    Expr.Add(&Expr.Num(1), &Expr.Num(2))
  }
---
package main

func MakeExprNum(arg0 int) Expr {
	return Expr{Tag: ExprNum, Num: arg0}
}

func MakeExprAdd(arg0 *Expr, arg1 *Expr) Expr {
	return Expr{Tag: ExprAdd, Add0: arg0, Add1: arg1}
}

type ExprTag uint8

const (
	ExprNum ExprTag = iota
	ExprAdd
)

type Expr struct {
	Tag  ExprTag
	Num  int
	Add0 *Expr
	Add1 *Expr
}

func test() Expr {
	ref := MakeExprNum(1)
	ref_1 := MakeExprNum(2)
	return MakeExprAdd(&ref, &ref_1)
}
