tests/spec/emit/snapshots/ref_of_call_no_hoist_when_no_side_effects.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn takes_two(a: int, b: Ref<int>) -> int { a + b.* }
  fn make_int() -> int { 2 }
  
  fn test() -> int {
    takes_two(1, &make_int())
  }
---
package main

func takesTwo(a int, b *int) int {
	return a + *b
}

func makeInt() int {
	return 2
}

func test() int {
	ref := makeInt()
	return takesTwo(1, &ref)
}
