tests/spec/emit/snapshots/ref_receiver_camel_cases_public_snake_case_field.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Foo {
    pub bar_baz: string,
  }
  
  impl Foo {
    fn show(self: Ref<Foo>) -> string {
      self.bar_baz
    }
  }
  
  fn test() {
    let mut foo = Foo { bar_baz: "quux" }
    let _ = foo.show()
  }
---
package main

type Foo struct {
	BarBaz string
}

func (f *Foo) show() string {
	return f.BarBaz
}

func test() {
	foo := Foo{BarBaz: "quux"}
	foo.show()
}
