tests/spec/emit/snapshots/ref_slice.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn test(s: Ref<Slice<int>>) {
    let _ = s
  }
---
package main

func test(s *[]int) {
	_ = s
}
