tests/spec/emit/snapshots/ref_slice_append_expr_position.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn main() {
    let mut s = [1]
    let r = &s
    let _ = r.*.append(2)
  }
---
package main

func main() {
	s := []int{1}
	r := &s
	recv := *r
	_ = append(recv[:len(recv):len(recv)], 2)
}
